# ecs-bot

./: .env.example  Dockerfile  pyproject.toml
.github/workflows/: build.yml
src/bot/: __main__.py  client.py  config.py
src/bot/cogs/: appreciation.py
