[project]
name = "ecs-bot"
version = "0.1.0"
description = "ECSS Discord Bot"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4",
]

[project.scripts]
ecs-bot = "bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
